snapshots/serde/serde/src/private/doc.rs.snap
---
source: tests/common/mod.rs
expression: funcspace_struct
---
name: "[filepath]"
start_line: 1
end_line: 159
kind: unit
spaces:
  - name: Error
    start_line: 11
    end_line: 18
    kind: impl
    spaces:
      - name: custom
        start_line: 12
        end_line: 17
        kind: function
        spaces: []
        metrics:
          nargs:
            function_args: 1
            closure_args: 0
            function_args_average: 1
            closure_args_average: 0
            total: 1
            value: 1
            average: 1
            function_args_min: 1
            function_args_max: 1
            closure_args_min: 0
            closure_args_max: 0
          nexits:
            sum: 0
            average: 0
            min: 0
            max: 0
          cognitive:
            sum: 0
            value: 0
            average: 0
            min: 0
            max: 0
          cyclomatic:
            sum: 1
            value: 1
            average: 1
            min: 1
            max: 1
            modified:
              sum: 1
              value: 1
              average: 1
              min: 1
              max: 1
          halstead:
            unique_operators: 9
            total_operators: 11
            unique_operands: 6
            total_operands: 8
            length: 19
            estimated_program_length: 44.039
            purity_ratio: 2.318
            vocabulary: 15
            volume: 74.231
            difficulty: 6
            level: 0.167
            effort: 445.386
            time: 24.744
            bugs: 0.019
          loc:
            sloc: 6
            ploc: 6
            lloc: 0
            cloc: 0
            blank: 0
            sloc_average: 6
            ploc_average: 6
            lloc_average: 0
            cloc_average: 0
            blank_average: 0
            sloc_min: 6
            sloc_max: 6
            cloc_min: 0
            cloc_max: 0
            ploc_min: 6
            ploc_max: 6
            lloc_min: 0
            lloc_max: 0
            blank_min: 0
            blank_max: 0
          nom:
            functions: 1
            closures: 0
            functions_average: 1
            closures_average: 0
            total: 1
            average: 1
            functions_min: 1
            functions_max: 1
            closures_min: 0
            closures_max: 0
          tokens:
            tokens: 23
            average: 23
            min: 23
            max: 23
          mi:
            original: 119.346
            sei: 96.581
            visual_studio: 69.793
          abc:
            assignments: 0
            branches: 0
            conditions: 0
            magnitude: 0
            value: 0
            assignments_average: 0
            branches_average: 0
            conditions_average: 0
            assignments_min: 0
            assignments_max: 0
            branches_min: 0
            branches_max: 0
            conditions_min: 0
            conditions_max: 0
    metrics:
      nargs:
        function_args: 1
        closure_args: 0
        function_args_average: 1
        closure_args_average: 0
        total: 1
        value: 0
        average: 1
        function_args_min: 0
        function_args_max: 1
        closure_args_min: 0
        closure_args_max: 0
      nexits:
        sum: 0
        average: 0
        min: 0
        max: 0
      cognitive:
        sum: 0
        value: 0
        average: 0
        min: 0
        max: 0
      cyclomatic:
        sum: 3
        value: 2
        average: 3
        min: 1
        max: 2
        modified:
          sum: 3
          value: 2
          average: 3
          min: 1
          max: 2
      halstead:
        unique_operators: 12
        total_operators: 15
        unique_operands: 8
        total_operands: 11
        length: 26
        estimated_program_length: 67.02
        purity_ratio: 2.578
        vocabulary: 20
        volume: 112.37
        difficulty: 8.25
        level: 0.121
        effort: 927.054
        time: 51.503
        bugs: 0.032
      loc:
        sloc: 8
        ploc: 8
        lloc: 0
        cloc: 0
        blank: 0
        sloc_average: 4
        ploc_average: 4
        lloc_average: 0
        cloc_average: 0
        blank_average: 0
        sloc_min: 6
        sloc_max: 8
        cloc_min: 0
        cloc_max: 0
        ploc_min: 6
        ploc_max: 8
        lloc_min: 0
        lloc_max: 0
        blank_min: 0
        blank_max: 0
      nom:
        functions: 1
        closures: 0
        functions_average: 0.5
        closures_average: 0
        total: 1
        average: 0.5
        functions_min: 0
        functions_max: 1
        closures_min: 0
        closures_max: 0
      tokens:
        tokens: 31
        average: 15.5
        min: 8
        max: 23
      mi:
        original: 112.07
        sei: 86.287
        visual_studio: 65.538
      abc:
        assignments: 0
        branches: 0
        conditions: 0
        magnitude: 0
        value: 0
        assignments_average: 0
        branches_average: 0
        conditions_average: 0
        assignments_min: 0
        assignments_max: 0
        branches_min: 0
        branches_max: 0
        conditions_min: 0
        conditions_max: 0
      wmc:
        class_wmc_sum: 1
        interface_wmc_sum: 0
        total: 1
      npm:
        class_npm_sum: 0
        interface_npm_sum: 0
        class_methods: 1
        interface_methods: 0
        class_coa: 0
        interface_coa: 0
        total: 0
        total_methods: 1
        coa: 0
      npa:
        class_npa_sum: 0
        interface_npa_sum: 0
        class_attributes: 0
        interface_attributes: 0
        class_cda: 0
        interface_cda: 0
        total: 0
        total_attributes: 0
        cda: 0
  - name: Error
    start_line: 21
    end_line: 25
    kind: impl
    spaces:
      - name: description
        start_line: 22
        end_line: 24
        kind: function
        spaces: []
        metrics:
          nargs:
            function_args: 0
            closure_args: 0
            function_args_average: 0
            closure_args_average: 0
            total: 0
            value: 0
            average: 0
            function_args_min: 0
            function_args_max: 0
            closure_args_min: 0
            closure_args_max: 0
          nexits:
            sum: 0
            average: 0
            min: 0
            max: 0
          cognitive:
            sum: 0
            value: 0
            average: 0
            min: 0
            max: 0
          cyclomatic:
            sum: 1
            value: 1
            average: 1
            min: 1
            max: 1
            modified:
              sum: 1
              value: 1
              average: 1
              min: 1
              max: 1
          halstead:
            unique_operators: 7
            total_operators: 9
            unique_operands: 3
            total_operands: 3
            length: 12
            estimated_program_length: 24.406
            purity_ratio: 2.034
            vocabulary: 10
            volume: 39.863
            difficulty: 3.5
            level: 0.286
            effort: 139.521
            time: 7.751
            bugs: 0.009
          loc:
            sloc: 3
            ploc: 3
            lloc: 0
            cloc: 0
            blank: 0
            sloc_average: 3
            ploc_average: 3
            lloc_average: 0
            cloc_average: 0
            blank_average: 0
            sloc_min: 3
            sloc_max: 3
            cloc_min: 0
            cloc_max: 0
            ploc_min: 3
            ploc_max: 3
            lloc_min: 0
            lloc_max: 0
            blank_min: 0
            blank_max: 0
          nom:
            functions: 1
            closures: 0
            functions_average: 1
            closures_average: 0
            total: 1
            average: 1
            functions_min: 1
            functions_max: 1
            closures_min: 0
            closures_max: 0
          tokens:
            tokens: 15
            average: 15
            min: 15
            max: 15
          mi:
            original: 133.808
            sei: 117.445
            visual_studio: 78.25
          abc:
            assignments: 0
            branches: 0
            conditions: 0
            magnitude: 0
            value: 0
            assignments_average: 0
            branches_average: 0
            conditions_average: 0
            assignments_min: 0
            assignments_max: 0
            branches_min: 0
            branches_max: 0
            conditions_min: 0
            conditions_max: 0
    metrics:
      nargs:
        function_args: 0
        closure_args: 0
        function_args_average: 0
        closure_args_average: 0
        total: 0
        value: 0
        average: 0
        function_args_min: 0
        function_args_max: 0
        closure_args_min: 0
        closure_args_max: 0
      nexits:
        sum: 0
        average: 0
        min: 0
        max: 0
      cognitive:
        sum: 0
        value: 0
        average: 0
        min: 0
        max: 0
      cyclomatic:
        sum: 3
        value: 2
        average: 3
        min: 1
        max: 2
        modified:
          sum: 3
          value: 2
          average: 3
          min: 1
          max: 2
      halstead:
        unique_operators: 10
        total_operators: 13
        unique_operands: 5
        total_operands: 6
        length: 19
        estimated_program_length: 44.829
        purity_ratio: 2.359
        vocabulary: 15
        volume: 74.231
        difficulty: 6
        level: 0.167
        effort: 445.386
        time: 24.744
        bugs: 0.019
      loc:
        sloc: 5
        ploc: 5
        lloc: 0
        cloc: 0
        blank: 0
        sloc_average: 2.5
        ploc_average: 2.5
        lloc_average: 0
        cloc_average: 0
        blank_average: 0
        sloc_min: 3
        sloc_max: 5
        cloc_min: 0
        cloc_max: 0
        ploc_min: 3
        ploc_max: 5
        lloc_min: 0
        lloc_max: 0
        blank_min: 0
        blank_max: 0
      nom:
        functions: 1
        closures: 0
        functions_average: 0.5
        closures_average: 0
        total: 1
        average: 0.5
        functions_min: 0
        functions_max: 1
        closures_min: 0
        closures_max: 0
      tokens:
        tokens: 23
        average: 11.5
        min: 8
        max: 15
      mi:
        original: 121.84
        sei: 100.382
        visual_studio: 71.251
      abc:
        assignments: 0
        branches: 0
        conditions: 0
        magnitude: 0
        value: 0
        assignments_average: 0
        branches_average: 0
        conditions_average: 0
        assignments_min: 0
        assignments_max: 0
        branches_min: 0
        branches_max: 0
        conditions_min: 0
        conditions_max: 0
      wmc:
        class_wmc_sum: 1
        interface_wmc_sum: 0
        total: 1
      npm:
        class_npm_sum: 0
        interface_npm_sum: 0
        class_methods: 1
        interface_methods: 0
        class_coa: 0
        interface_coa: 0
        total: 0
        total_methods: 1
        coa: 0
      npa:
        class_npa_sum: 0
        interface_npa_sum: 0
        class_attributes: 0
        interface_attributes: 0
        class_cda: 0
        interface_cda: 0
        total: 0
        total_attributes: 0
        cda: 0
  - name: Error
    start_line: 27
    end_line: 31
    kind: impl
    spaces:
      - name: fmt
        start_line: 28
        end_line: 30
        kind: function
        spaces: []
        metrics:
          nargs:
            function_args: 1
            closure_args: 0
            function_args_average: 1
            closure_args_average: 0
            total: 1
            value: 1
            average: 1
            function_args_min: 1
            function_args_max: 1
            closure_args_min: 0
            closure_args_max: 0
          nexits:
            sum: 0
            average: 0
            min: 0
            max: 0
          cognitive:
            sum: 0
            value: 0
            average: 0
            min: 0
            max: 0
          cyclomatic:
            sum: 1
            value: 1
            average: 1
            min: 1
            max: 1
            modified:
              sum: 1
              value: 1
              average: 1
              min: 1
              max: 1
          halstead:
            unique_operators: 10
            total_operators: 13
            unique_operands: 6
            total_operands: 8
            length: 21
            estimated_program_length: 48.729
            purity_ratio: 2.32
            vocabulary: 16
            volume: 84
            difficulty: 6.667
            level: 0.15
            effort: 560
            time: 31.111
            bugs: 0.023
          loc:
            sloc: 3
            ploc: 3
            lloc: 0
            cloc: 0
            blank: 0
            sloc_average: 3
            ploc_average: 3
            lloc_average: 0
            cloc_average: 0
            blank_average: 0
            sloc_min: 3
            sloc_max: 3
            cloc_min: 0
            cloc_max: 0
            ploc_min: 3
            ploc_max: 3
            lloc_min: 0
            lloc_max: 0
            blank_min: 0
            blank_max: 0
          nom:
            functions: 1
            closures: 0
            functions_average: 1
            closures_average: 0
            total: 1
            average: 1
            functions_min: 1
            functions_max: 1
            closures_min: 0
            closures_max: 0
          tokens:
            tokens: 24
            average: 24
            min: 24
            max: 24
          mi:
            original: 129.932
            sei: 111.854
            visual_studio: 75.984
          abc:
            assignments: 0
            branches: 0
            conditions: 0
            magnitude: 0
            value: 0
            assignments_average: 0
            branches_average: 0
            conditions_average: 0
            assignments_min: 0
            assignments_max: 0
            branches_min: 0
            branches_max: 0
            conditions_min: 0
            conditions_max: 0
    metrics:
      nargs:
        function_args: 1
        closure_args: 0
        function_args_average: 1
        closure_args_average: 0
        total: 1
        value: 0
        average: 1
        function_args_min: 0
        function_args_max: 1
        closure_args_min: 0
        closure_args_max: 0
      nexits:
        sum: 0
        average: 0
        min: 0
        max: 0
      cognitive:
        sum: 0
        value: 0
        average: 0
        min: 0
        max: 0
      cyclomatic:
        sum: 3
        value: 2
        average: 3
        min: 1
        max: 2
        modified:
          sum: 3
          value: 2
          average: 3
          min: 1
          max: 2
      halstead:
        unique_operators: 12
        total_operators: 16
        unique_operands: 8
        total_operands: 10
        length: 26
        estimated_program_length: 67.02
        purity_ratio: 2.578
        vocabulary: 20
        volume: 112.37
        difficulty: 7.5
        level: 0.133
        effort: 842.776
        time: 46.821
        bugs: 0.03
      loc:
        sloc: 5
        ploc: 5
        lloc: 0
        cloc: 0
        blank: 0
        sloc_average: 2.5
        ploc_average: 2.5
        lloc_average: 0
        cloc_average: 0
        blank_average: 0
        sloc_min: 3
        sloc_max: 5
        cloc_min: 0
        cloc_max: 0
        ploc_min: 3
        ploc_max: 5
        lloc_min: 0
        lloc_max: 0
        blank_min: 0
        blank_max: 0
      nom:
        functions: 1
        closures: 0
        functions_average: 0.5
        closures_average: 0
        total: 1
        average: 0.5
        functions_min: 0
        functions_max: 1
        closures_min: 0
        closures_max: 0
      tokens:
        tokens: 30
        average: 15
        min: 6
        max: 24
      mi:
        original: 119.684
        sei: 97.272
        visual_studio: 69.991
      abc:
        assignments: 0
        branches: 0
        conditions: 0
        magnitude: 0
        value: 0
        assignments_average: 0
        branches_average: 0
        conditions_average: 0
        assignments_min: 0
        assignments_max: 0
        branches_min: 0
        branches_max: 0
        conditions_min: 0
        conditions_max: 0
      wmc:
        class_wmc_sum: 1
        interface_wmc_sum: 0
        total: 1
      npm:
        class_npm_sum: 0
        interface_npm_sum: 0
        class_methods: 1
        interface_methods: 0
        class_coa: 0
        interface_coa: 0
        total: 0
        total_methods: 1
        coa: 0
      npa:
        class_npa_sum: 0
        interface_npa_sum: 0
        class_attributes: 0
        interface_attributes: 0
        class_cda: 0
        interface_cda: 0
        total: 0
        total_attributes: 0
        cda: 0
metrics:
  nargs:
    function_args: 2
    closure_args: 0
    function_args_average: 0.667
    closure_args_average: 0
    total: 2
    value: 0
    average: 0.667
    function_args_min: 0
    function_args_max: 1
    closure_args_min: 0
    closure_args_max: 0
  nexits:
    sum: 0
    average: 0
    min: 0
    max: 0
  cognitive:
    sum: 0
    value: 0
    average: 0
    min: 0
    max: 0
  cyclomatic:
    sum: 10
    value: 1
    average: 3.333
    min: 1
    max: 2
    modified:
      sum: 10
      value: 1
      average: 3.3333333333333335
      min: 1
      max: 2
  halstead:
    unique_operators: 42
    total_operators: 569
    unique_operands: 87
    total_operands: 234
    length: 803
    estimated_program_length: 787.013
    purity_ratio: 0.98
    vocabulary: 129
    volume: 5630.015
    difficulty: 56.483
    level: 0.018
    effort: 317998.806
    time: 17666.6
    bugs: 1.553
  loc:
    sloc: 159
    ploc: 148
    lloc: 0
    cloc: 1
    blank: 10
    sloc_average: 22.714
    ploc_average: 21.143
    lloc_average: 0
    cloc_average: 0.143
    blank_average: 1.429
    sloc_min: 3
    sloc_max: 159
    cloc_min: 0
    cloc_max: 1
    ploc_min: 3
    ploc_max: 148
    lloc_min: 0
    lloc_max: 0
    blank_min: 0
    blank_max: 10
  nom:
    functions: 3
    closures: 0
    functions_average: 0.429
    closures_average: 0
    total: 3
    average: 0.429
    functions_min: 0
    functions_max: 1
    closures_min: 0
    closures_max: 0
  tokens:
    tokens: 1020
    average: 145.714
    min: 6
    max: 936
  mi:
    original: 41.677
    sei: 32.546
    visual_studio: 24.373
  abc:
    assignments: 0
    branches: 0
    conditions: 0
    magnitude: 0
    value: 0
    assignments_average: 0
    branches_average: 0
    conditions_average: 0
    assignments_min: 0
    assignments_max: 0
    branches_min: 0
    branches_max: 0
    conditions_min: 0
    conditions_max: 0
  wmc:
    class_wmc_sum: 3
    interface_wmc_sum: 0
    total: 3
  npm:
    class_npm_sum: 0
    interface_npm_sum: 0
    class_methods: 3
    interface_methods: 0
    class_coa: 0
    interface_coa: 0
    total: 0
    total_methods: 3
    coa: 0
  npa:
    class_npa_sum: 0
    interface_npa_sum: 0
    class_attributes: 0
    interface_attributes: 0
    class_cda: 0
    interface_cda: 0
    total: 0
    total_attributes: 0
    cda: 0
