snapshots/serde/serde/src/private/mod.rs.snap
---
source: tests/common/mod.rs
expression: funcspace_struct
---
name: "[filepath]"
start_line: 1
end_line: 50
kind: unit
spaces:
  - name: from_utf8_lossy
    start_line: 32
    end_line: 34
    kind: function
    spaces: []
    metrics:
      nargs:
        function_args: 1
        closure_args: 0
        function_args_average: 1
        closure_args_average: 0
        total: 1
        value: 1
        average: 1
        function_args_min: 1
        function_args_max: 1
        closure_args_min: 0
        closure_args_max: 0
      nexits:
        sum: 0
        average: 0
        min: 0
        max: 0
      cognitive:
        sum: 0
        value: 0
        average: 0
        min: 0
        max: 0
      cyclomatic:
        sum: 1
        value: 1
        average: 1
        min: 1
        max: 1
        modified:
          sum: 1
          value: 1
          average: 1
          min: 1
          max: 1
      halstead:
        unique_operators: 13
        total_operators: 14
        unique_operands: 4
        total_operands: 6
        length: 20
        estimated_program_length: 56.106
        purity_ratio: 2.805
        vocabulary: 17
        volume: 81.749
        difficulty: 9.75
        level: 0.103
        effort: 797.055
        time: 44.281
        bugs: 0.029
      loc:
        sloc: 3
        ploc: 3
        lloc: 0
        cloc: 0
        blank: 0
        sloc_average: 3
        ploc_average: 3
        lloc_average: 0
        cloc_average: 0
        blank_average: 0
        sloc_min: 3
        sloc_max: 3
        cloc_min: 0
        cloc_max: 0
        ploc_min: 3
        ploc_max: 3
        lloc_min: 0
        lloc_max: 0
        blank_min: 0
        blank_max: 0
      nom:
        functions: 1
        closures: 0
        functions_average: 1
        closures_average: 0
        total: 1
        average: 1
        functions_min: 1
        functions_max: 1
        closures_min: 0
        closures_max: 0
      tokens:
        tokens: 24
        average: 24
        min: 24
        max: 24
      mi:
        original: 130.073
        sei: 112.057
        visual_studio: 76.066
      abc:
        assignments: 0
        branches: 1
        conditions: 0
        magnitude: 1
        value: 1
        assignments_average: 0
        branches_average: 1
        conditions_average: 0
        assignments_min: 0
        assignments_max: 0
        branches_min: 1
        branches_max: 1
        conditions_min: 0
        conditions_max: 0
  - name: from_utf8_lossy
    start_line: 44
    end_line: 49
    kind: function
    spaces: []
    metrics:
      nargs:
        function_args: 1
        closure_args: 0
        function_args_average: 1
        closure_args_average: 0
        total: 1
        value: 1
        average: 1
        function_args_min: 1
        function_args_max: 1
        closure_args_min: 0
        closure_args_max: 0
      nexits:
        sum: 0
        average: 0
        min: 0
        max: 0
      cognitive:
        sum: 0
        value: 0
        average: 0
        min: 0
        max: 0
      cyclomatic:
        sum: 1
        value: 1
        average: 1
        min: 1
        max: 1
        modified:
          sum: 1
          value: 1
          average: 1
          min: 1
          max: 1
      halstead:
        unique_operators: 12
        total_operators: 15
        unique_operands: 6
        total_operands: 7
        length: 22
        estimated_program_length: 58.529
        purity_ratio: 2.66
        vocabulary: 18
        volume: 91.738
        difficulty: 7
        level: 0.143
        effort: 642.168
        time: 35.676
        bugs: 0.025
      loc:
        sloc: 6
        ploc: 3
        lloc: 0
        cloc: 3
        blank: 0
        sloc_average: 6
        ploc_average: 3
        lloc_average: 0
        cloc_average: 3
        blank_average: 0
        sloc_min: 6
        sloc_max: 6
        cloc_min: 3
        cloc_max: 3
        ploc_min: 3
        ploc_max: 3
        lloc_min: 0
        lloc_max: 0
        blank_min: 0
        blank_max: 0
      nom:
        functions: 1
        closures: 0
        functions_average: 1
        closures_average: 0
        total: 1
        average: 1
        functions_min: 1
        functions_max: 1
        closures_min: 0
        closures_max: 0
      tokens:
        tokens: 31
        average: 31
        min: 31
        max: 31
      mi:
        original: 118.245
        sei: 45.035
        visual_studio: 69.149
      abc:
        assignments: 0
        branches: 2
        conditions: 0
        magnitude: 2
        value: 2
        assignments_average: 0
        branches_average: 2
        conditions_average: 0
        assignments_min: 0
        assignments_max: 0
        branches_min: 2
        branches_max: 2
        conditions_min: 0
        conditions_max: 0
metrics:
  nargs:
    function_args: 2
    closure_args: 0
    function_args_average: 1
    closure_args_average: 0
    total: 2
    value: 0
    average: 1
    function_args_min: 0
    function_args_max: 1
    closure_args_min: 0
    closure_args_max: 0
  nexits:
    sum: 0
    average: 0
    min: 0
    max: 0
  cognitive:
    sum: 0
    value: 0
    average: 0
    min: 0
    max: 0
  cyclomatic:
    sum: 3
    value: 1
    average: 1.5
    min: 1
    max: 1
    modified:
      sum: 3
      value: 1
      average: 1.5
      min: 1
      max: 1
  halstead:
    unique_operators: 20
    total_operators: 142
    unique_operands: 46
    total_operands: 87
    length: 229
    estimated_program_length: 340.522
    purity_ratio: 1.487
    vocabulary: 66
    volume: 1384.166
    difficulty: 18.913
    level: 0.053
    effort: 26178.797
    time: 1454.378
    bugs: 0.294
  loc:
    sloc: 50
    ploc: 30
    lloc: 0
    cloc: 11
    blank: 9
    sloc_average: 16.667
    ploc_average: 10
    lloc_average: 0
    cloc_average: 3.667
    blank_average: 3
    sloc_min: 3
    sloc_max: 50
    cloc_min: 0
    cloc_max: 11
    ploc_min: 3
    ploc_max: 30
    lloc_min: 0
    lloc_max: 0
    blank_min: 0
    blank_max: 9
  nom:
    functions: 2
    closures: 0
    functions_average: 0.667
    closures_average: 0
    total: 2
    average: 0.667
    functions_min: 0
    functions_max: 1
    closures_min: 0
    closures_max: 0
  tokens:
    tokens: 285
    average: 95
    min: 24
    max: 230
  mi:
    original: 69.324
    sei: 66.232
    visual_studio: 40.541
  abc:
    assignments: 0
    branches: 3
    conditions: 0
    magnitude: 3
    value: 0
    assignments_average: 0
    branches_average: 1
    conditions_average: 0
    assignments_min: 0
    assignments_max: 0
    branches_min: 0
    branches_max: 2
    conditions_min: 0
    conditions_max: 0
  wmc:
    class_wmc_sum: 0
    interface_wmc_sum: 0
    total: 0
  npm:
    class_npm_sum: 0
    interface_npm_sum: 0
    class_methods: 0
    interface_methods: 0
    class_coa: 0
    interface_coa: 0
    total: 0
    total_methods: 0
    coa: 0
  npa:
    class_npa_sum: 0
    interface_npa_sum: 0
    class_attributes: 0
    interface_attributes: 0
    class_cda: 0
    interface_cda: 0
    total: 0
    total_attributes: 0
    cda: 0
