snapshots/serde/serde/src/private/size_hint.rs.snap
---
source: tests/common/mod.rs
expression: funcspace_struct
---
name: "[filepath]"
start_line: 1
end_line: 21
kind: unit
spaces:
  - name: from_bounds
    start_line: 3
    end_line: 8
    kind: function
    spaces: []
    metrics:
      nargs:
        function_args: 1
        closure_args: 0
        function_args_average: 1
        closure_args_average: 0
        total: 1
        value: 1
        average: 1
        function_args_min: 1
        function_args_max: 1
        closure_args_min: 0
        closure_args_max: 0
      nexits:
        sum: 0
        average: 0
        min: 0
        max: 0
      cognitive:
        sum: 0
        value: 0
        average: 0
        min: 0
        max: 0
      cyclomatic:
        sum: 1
        value: 1
        average: 1
        min: 1
        max: 1
        modified:
          sum: 1
          value: 1
          average: 1
          min: 1
          max: 1
      halstead:
        unique_operators: 13
        total_operators: 18
        unique_operands: 7
        total_operands: 10
        length: 28
        estimated_program_length: 67.757
        purity_ratio: 2.42
        vocabulary: 20
        volume: 121.014
        difficulty: 9.286
        level: 0.108
        effort: 1123.701
        time: 62.428
        bugs: 0.036
      loc:
        sloc: 6
        ploc: 6
        lloc: 0
        cloc: 0
        blank: 0
        sloc_average: 6
        ploc_average: 6
        lloc_average: 0
        cloc_average: 0
        blank_average: 0
        sloc_min: 6
        sloc_max: 6
        cloc_min: 0
        cloc_max: 0
        ploc_min: 6
        ploc_max: 6
        lloc_min: 0
        lloc_max: 0
        blank_min: 0
        blank_max: 0
      nom:
        functions: 1
        closures: 0
        functions_average: 1
        closures_average: 0
        total: 1
        average: 1
        functions_min: 1
        functions_max: 1
        closures_min: 0
        closures_max: 0
      tokens:
        tokens: 32
        average: 32
        min: 32
        max: 32
      mi:
        original: 116.805
        sei: 92.915
        visual_studio: 68.307
      abc:
        assignments: 0
        branches: 2
        conditions: 0
        magnitude: 2
        value: 2
        assignments_average: 0
        branches_average: 2
        conditions_average: 0
        assignments_min: 0
        assignments_max: 0
        branches_min: 2
        branches_max: 2
        conditions_min: 0
        conditions_max: 0
  - name: cautious
    start_line: 12
    end_line: 14
    kind: function
    spaces: []
    metrics:
      nargs:
        function_args: 1
        closure_args: 0
        function_args_average: 1
        closure_args_average: 0
        total: 1
        value: 1
        average: 1
        function_args_min: 1
        function_args_max: 1
        closure_args_min: 0
        closure_args_max: 0
      nexits:
        sum: 0
        average: 0
        min: 0
        max: 0
      cognitive:
        sum: 0
        value: 0
        average: 0
        min: 0
        max: 0
      cyclomatic:
        sum: 1
        value: 1
        average: 1
        min: 1
        max: 1
        modified:
          sum: 1
          value: 1
          average: 1
          min: 1
          max: 1
      halstead:
        unique_operators: 12
        total_operators: 15
        unique_operands: 8
        total_operands: 9
        length: 24
        estimated_program_length: 67.02
        purity_ratio: 2.792
        vocabulary: 20
        volume: 103.726
        difficulty: 6.75
        level: 0.148
        effort: 700.152
        time: 38.897
        bugs: 0.026
      loc:
        sloc: 3
        ploc: 3
        lloc: 0
        cloc: 0
        blank: 0
        sloc_average: 3
        ploc_average: 3
        lloc_average: 0
        cloc_average: 0
        blank_average: 0
        sloc_min: 3
        sloc_max: 3
        cloc_min: 0
        cloc_max: 0
        ploc_min: 3
        ploc_max: 3
        lloc_min: 0
        lloc_max: 0
        blank_min: 0
        blank_max: 0
      nom:
        functions: 1
        closures: 0
        functions_average: 1
        closures_average: 0
        total: 1
        average: 1
        functions_min: 1
        functions_max: 1
        closures_min: 0
        closures_max: 0
      tokens:
        tokens: 28
        average: 28
        min: 28
        max: 28
      mi:
        original: 128.835
        sei: 110.271
        visual_studio: 75.342
      abc:
        assignments: 0
        branches: 2
        conditions: 0
        magnitude: 2
        value: 2
        assignments_average: 0
        branches_average: 2
        conditions_average: 0
        assignments_min: 0
        assignments_max: 0
        branches_min: 2
        branches_max: 2
        conditions_min: 0
        conditions_max: 0
  - name: helper
    start_line: 16
    end_line: 21
    kind: function
    spaces: []
    metrics:
      nargs:
        function_args: 1
        closure_args: 0
        function_args_average: 1
        closure_args_average: 0
        total: 1
        value: 1
        average: 1
        function_args_min: 1
        function_args_max: 1
        closure_args_min: 0
        closure_args_max: 0
      nexits:
        sum: 0
        average: 0
        min: 0
        max: 0
      cognitive:
        sum: 1
        value: 1
        average: 1
        min: 1
        max: 1
      cyclomatic:
        sum: 3
        value: 3
        average: 3
        min: 3
        max: 3
        modified:
          sum: 3
          value: 3
          average: 3
          min: 3
          max: 3
      halstead:
        unique_operators: 13
        total_operators: 26
        unique_operands: 8
        total_operands: 14
        length: 40
        estimated_program_length: 72.106
        purity_ratio: 1.803
        vocabulary: 21
        volume: 175.693
        difficulty: 11.375
        level: 0.088
        effort: 1998.504
        time: 111.028
        bugs: 0.053
      loc:
        sloc: 6
        ploc: 6
        lloc: 1
        cloc: 0
        blank: 0
        sloc_average: 6
        ploc_average: 6
        lloc_average: 1
        cloc_average: 0
        blank_average: 0
        sloc_min: 6
        sloc_max: 6
        cloc_min: 0
        cloc_max: 0
        ploc_min: 6
        ploc_max: 6
        lloc_min: 1
        lloc_max: 1
        blank_min: 0
        blank_max: 0
      nom:
        functions: 1
        closures: 0
        functions_average: 1
        closures_average: 0
        total: 1
        average: 1
        functions_min: 1
        functions_max: 1
        closures_min: 0
        closures_max: 0
      tokens:
        tokens: 47
        average: 47
        min: 47
        max: 47
      mi:
        original: 114.406
        sei: 89.658
        visual_studio: 66.904
      abc:
        assignments: 0
        branches: 1
        conditions: 2
        magnitude: 2.236
        value: 2.236
        assignments_average: 0
        branches_average: 1
        conditions_average: 2
        assignments_min: 0
        assignments_max: 0
        branches_min: 1
        branches_max: 1
        conditions_min: 2
        conditions_max: 2
metrics:
  nargs:
    function_args: 3
    closure_args: 0
    function_args_average: 1
    closure_args_average: 0
    total: 3
    value: 0
    average: 1
    function_args_min: 0
    function_args_max: 1
    closure_args_min: 0
    closure_args_max: 0
  nexits:
    sum: 0
    average: 0
    min: 0
    max: 0
  cognitive:
    sum: 1
    value: 0
    average: 0.333
    min: 0
    max: 1
  cyclomatic:
    sum: 6
    value: 1
    average: 2
    min: 1
    max: 3
    modified:
      sum: 6
      value: 1
      average: 2
      min: 1
      max: 3
  halstead:
    unique_operators: 23
    total_operators: 70
    unique_operands: 27
    total_operands: 41
    length: 111
    estimated_program_length: 232.424
    purity_ratio: 2.094
    vocabulary: 50
    volume: 626.468
    difficulty: 17.463
    level: 0.057
    effort: 10939.988
    time: 607.777
    bugs: 0.164
  loc:
    sloc: 21
    ploc: 18
    lloc: 1
    cloc: 0
    blank: 3
    sloc_average: 5.25
    ploc_average: 4.5
    lloc_average: 0.25
    cloc_average: 0
    blank_average: 0.75
    sloc_min: 3
    sloc_max: 21
    cloc_min: 0
    cloc_max: 0
    ploc_min: 3
    ploc_max: 18
    lloc_min: 0
    lloc_max: 1
    blank_min: 0
    blank_max: 3
  nom:
    functions: 3
    closures: 0
    functions_average: 0.75
    closures_average: 0
    total: 3
    average: 0.75
    functions_min: 0
    functions_max: 1
    closures_min: 0
    closures_max: 0
  tokens:
    tokens: 136
    average: 34
    min: 28
    max: 47
  mi:
    original: 86.81
    sei: 50.151
    visual_studio: 50.766
  abc:
    assignments: 0
    branches: 5
    conditions: 2
    magnitude: 5.385
    value: 0
    assignments_average: 0
    branches_average: 1.25
    conditions_average: 0.5
    assignments_min: 0
    assignments_max: 0
    branches_min: 0
    branches_max: 2
    conditions_min: 0
    conditions_max: 2
  wmc:
    class_wmc_sum: 0
    interface_wmc_sum: 0
    total: 0
  npm:
    class_npm_sum: 0
    interface_npm_sum: 0
    class_methods: 0
    interface_methods: 0
    class_coa: 0
    interface_coa: 0
    total: 0
    total_methods: 0
    coa: 0
  npa:
    class_npa_sum: 0
    interface_npa_sum: 0
    class_attributes: 0
    interface_attributes: 0
    class_cda: 0
    interface_cda: 0
    total: 0
    total_attributes: 0
    cda: 0
